# snark-verifier-cli

./: .gitignore  Cargo.toml  README.md  trusted_setup_s3.sh
src/: cli.rs  main.rs  utils.rs
