[package]
name = "snark-verifier-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
bincode = "1.3.3"
anyhow = "1.0"

snark-verifier = { git = "https://github.com/axiom-crypto/snark-verifier.git", tag = "v0.1.1-ce" }
snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", tag = "v0.1.1-ce"}
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib.git", tag = "v0.3.0-ce", default-features = false }

ahash = "=0.8.6"
colored = "=2.0.0"

[features]
default = ["halo2-axiom"]
halo2-axiom = ["snark-verifier/halo2-axiom"]

#[patch."https://github.com/axiom-crypto/snark-verifier.git"]
#snark-verifier = { path = "../snark-verifier/snark-verifier" }
#snark-verifier-sdk = { path = "../snark-verifier/snark-verifier-sdk" }
